<resources>
    <string name="app_name" translatable="false">&appName;</string>
    <string name="google_map_api">AIzaSyD987pLKiSNASVnDzsvbPMHTxSvZR_bxRg</string>
    <string name="facebook_app_id">562245434540329</string>
    <string name="fb_login_protocol_scheme">fb562245434540329</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="we_will_send_you_a_one_time_sms_message_carrier_rate_may_apply">We will send you a One time SMS message carrier rate may apply</string>
    <string name="welcome_text">Welcome to &appName; support</string>
    <string name="call_support">Call Support</string>
    <string name="chat_support">Chat Support</string>
    <string name="weburl">Web Url</string>
    <string name="cancel">Reject</string>
    <string name="total">Total</string>
    <string name="online">You\'re online</string>
    <string name="offline">You\'re offline</string>
    <string name="trips">Rides</string>
    <string name="earning">Earning</string>
    <string name="i_forgot_my_password">Forgot?</string>
    <string name="resgister">Register</string>
    <string name="login">Login</string>
    <string name="username">Full Name</string>
    <string name="password">Password</string>
    <string name="dob">Date of birth</string>
    <string name="sample_mail_id">name@examplecom</string>
    <string name="upload_all_documents_and_check_term"><![CDATA[Upload all documents and check term & conditions]]></string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="first_name">First name</string>
    <string name="password_txt">******</string>
    <string name="recover_password">Enter your mail ID for recovery</string>
    <string name="enter_the_coupon">Enter the coupon code</string>
    <string name="update_success">Profile Updated</string>
    <string name="where_to_go">Where to?</string>
    <string name="cancel_ride">Cancel &service;</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past rides</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="exit_confirm">Are you sure you want to logout?</string>
    <string name="source_location">Your location</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="cencel_request">Are you sure you want to cancel the &service;?</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet</string>
    <string name="server_down">Unable to reach server</string>
    <string name="please_try_again">Please try again</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="first_name_empty">Name required</string>
    <string name="mobile_number_empty">Mobile number required</string>
    <string name="mobile_number_validation">Mobile number must have numbers between 10 to 20 digits</string>
    <string name="True">true</string>
    <string name="False">false</string>
    <string name="not_vaild_coupon">Coupon is not valid or may expired</string>
    <string name="coupon_added">Coupon applied successfully</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="added_coupon">Coupon\'s applied by you</string>
    <string name="already_in_use_coupon">Coupon already used by you</string>
    <string name="expired_coupon">Sorry, coupon has expired</string>
    <string name="off">OFF</string>
    <string name="the_applied_coupon">The coupon code applied is</string>
    <string name="valid_until">Valid until</string>
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password</string>
    <string name="please_enter_new_pass">Please enter new password</string>
    <string name="please_enter_confirm_pass">Please enter confirmation password</string>
    <string name="different_passwords">Password doesn\'t match</string>
    <string name="enter_mobile_no">Enter Mobile number</string>
    <string name="pin_location">Set pin location</string>
    <string name="complaint_not_empty">Complaint text not should be empty</string>
    <string name="complaint_submitted">Your complaint submitted</string>
    <string name="terms_of_Service">Terms of Service</string>
    <string name="privacy_policy_">Privacy Policy</string>
    <string name="legal">Legal</string>
    <string name="about_page">It is a long established fact that a reader will be distracted by
        the readable content of a page when looking at its layout. The point of using Lorem Ipsum
        is that it has a more-or-less normal distribution of letters, as opposed to using
        Various versions have evolved over the years, sometimes by accident,
        sometimes on purpose (injected humour and the like).</string>
    <string name="home">Home</string>
    <string name="mobile"> Mobile Number</string>
    <string name="your_trips">My Rides</string>
    <string name="help">Help</string>
    <string name="earnings">My Earning</string>
    <string name="logout">Logout</string>
    <string name="valid_image">No image found</string>
    <string name="user_no_mobile">User do not have a valid mobile number.</string>
    <string name="confirm_password_validation">Password Mismatch</string>
    <string name="confirm_validation">Confirm password must be greater than 6</string>
    <string name="new_validation">New password must be greater than 6</string>
    <string name="note">Note : Please enter the OTP sent to your registered email</string>
    <string name="secrete_code">Enter OTP</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel_confirm">Are you sure you want to cancel the &trip;?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_services">No services assigned</string>
    <string name="commission">&service; charge</string>
    <string name="no_comments">No comment available</string>
    <string name="base_price">Base fare</string>
    <string name="distance_price">Distance fare</string>
    <string name="sos_confirm">Are you sure you want to proceed with emergency call?</string>
    <string name="invoice">Invoice</string>
    <string name="pick_up">Pick up Location </string>
    <string name="drop_at">Drop Location </string>
    <string name="reason_to_cancel">Reason To Cancel</string>
    <string name="booking_id_colon">Booking ID :</string>
    <string name="booking_id">Booking ID</string>
    <string name="submit">Submit</string>
    <string name="summary">Summary</string>
    <string name="revenue">REVENUE</string>
    <string name="schedule_rides">SCHEDULED &tripscap;</string>
    <string name="canceled_rides">CANCELLED &tripscap;</string>
    <string name="rides">Rides</string>
    <string name="upcoming_rides">Upcoming &trips;</string>
    <string name="no_address">No address available</string>
    <string name="first_name_no_number">Name do not accept numbers</string>
    <string name="password_size">Password size must be atleast 6</string>
    <string name="sorry_for_inconvinent">Sorry for inconvenient,Our assisants are busy right now</string>
    <string name="no_rides">No &trips; completed.</string>
    <string name="rate_provider">How was your experience</string>
    <string name="tap_when_arrived">ARRIVED</string>
    <string name="tap_when_pickedup">PICKEDUP</string>
    <string name="tap_when_dropped">TAP WHEN DROPPED</string>
    <string name="tap_when_paid">CONFIRM PAYMENT</string>
    <string name="rate_user">SUBMIT</string>
    <string name="waitingForApproval">Please allow us  1 business days to review your profile.</string>
    <string name="earned_amount">Earned Money</string>
    <string name="withdraw">Withdraw</string>
    <string name="add">Add</string>
    <string name="add_account_">Add Account</string>
    <string name="add_account_details">Add Account Detail</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_details">Your Account Details</string>
    <string name="earned_money">Available Fund:</string>
    <string name="status">Status</string>
    <string name="past_withdraw">Past Withdraw</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="select_account">Select Account</string>
    <string name="not_added_bank_details_yet">Bank Details not found</string>
    <string name="start_ride">Start &trip;</string>
    <string name="approved">Approved</string>
    <string name="banned">Banned</string>
    <string name="notifications">Notifications</string>
    <string name="waiting_for_approval">Waiting for Approval</string>
    <string name="united_states">United States</string>
    <string name="usd">USD</string>
    <string name="account_names">Account Name:</string>
    <string name="bank_names">Bank Name:</string>
    <string name="account_numbers">Account Number:</string>
    <string name="routing_numbers">Routing Number:</string>
    <string name="countrys">Country:</string>
    <string name="you_not_have_an_account">You can\'t add more then one bank account</string>
    <string name="fifteen_days">We Will process your amount with in 15 days</string>
    <string name="go_online">GO ONLINE</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="amount">Amount</string>
    <string name="edit">Edit</string>
    <string name="review">Review</string>
    <string name="documents">Documents</string>
    <string name="edit_profile">Edit profile</string>
    <string name="you_are_on_the_way">You are on the way</string>
    <string name="you_have_to_reach_picked_up">You have to reach pick up</string>
    <string name="on_the_way_of_drop_off">On the way of drop off</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arbic">عربى</string>
    <string name="profile">Profile</string>
    <string name="please_upload_your_document">Please upload your document</string>
    <string name="driver">Login</string>
    <string name="please_upload_document">Please upload your document</string>
    <string name="default_notification_channel_id">10001</string>
    <string name="andwhy">Why specify?</string>
    <string name="my_reason_is_not_listed">My reason is not listed</string>
    <string name="booked_another_cab">Booked another cab</string>
    <string name="plan_changed">Plan Changed</string>
    <string name="please_select_reason">Please select reason</string>
    <string name="please_specify_reason">Please specify reason</string>
    <string name="update">UPDATE</string>
    <string name="add_account">Add Account</string>
    <string name="document_name">Document Name :</string>
    <string name="choose_language">Choose Language</string>
    <string name="secure_passwords">Secure Passwords are at least 8 characters long and include numbers and symbols.</string>
</resources>