<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="@dimen/_196sdp"
        android:background="@drawable/ic_launcher_web"
        android:layout_height="@dimen/_196sdp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/white"
        android:text="@string/choose_language"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdEng"
     android:layout_marginEnd="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:text="@string/english"
                android:buttonTint="@color/black"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/rdArb"
             android:layout_marginStart="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:text="@string/arbic"
                android:buttonTint="@color/black"
                android:textColor="@color/white"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:backgroundTint="#0000C0"
        android:background="@drawable/round_shape"/>


</LinearLayout>