<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/_2sdp"
    android:background="@color/cardview_shadow_end_color"
    android:orientation="horizontal"
    android:layout_marginHorizontal="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgDoc"
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_64sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDocumentsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/document_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtSatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/status"
                android:textColor="@color/green"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="end"
            android:text="@string/update"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
