<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/border_header">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            app:tint="@color/white"/>

        <com.speed.provider.utills.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"

            android:text="@string/change_password_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/secure_passwords"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/black" />


    <LinearLayout
        android:id="@+id/viewLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_forget_password"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        android:paddingVertical="50dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_text_field"
            android:elevation="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@null"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_text_field"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@null"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_text_field"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@null"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.speed.provider.utills.MyButton
        android:id="@+id/changePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:background="@drawable/round_shape"
        android:text="@string/change_password_title"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>